bynkc/tests/fixtures/negative/98_http_duplicate_route/src/svc.bynk
context svc

service api from http {
  on GET("/orders/:id") (id: String) -> Effect[HttpResult[String]] by v: Visitor {
    Ok("first")
  }

  on GET("/orders/:id") (id: String) -> Effect[HttpResult[String]] by v: Visitor {
    Ok("second")
  }
}
